--- a/i18n/hr.json
+++ b/i18n/hr.json
@@ -14,7 +14,7 @@
   "gallery": "Galerija",
   "welcome_header": "Dobro došli",
   "welcome_p1": "Na samom početku i najužem dijelu otoka Vira smještena je kuća Plavo Sidro. Taj položaj nam pruža izbor dvaju plaža.",
-  "welcome_p2": "Istočna plaža koja je udaljeno samo stotinjak metara od kuće započinje direktno iz naše ulice, te pruža pravu priliku za osvježenje u vrelim danima koji se sve češče zapisuju na otoku Viru. Zapadna plaža je smještena u uvali Prezida, gdje se uz duž cijele plaže nalazi više kafića i restorana.",
+  "welcome_p2": "Istočna plaža koja je udaljena samo stotinjak metara od kuće započinje direktno iz naše ulice, te pruža pravu priliku za osvježenje u vrelim danima koji se sve češče zapisuju na otoku Viru. Zapadna plaža je smještena u uvali Prezida, gdje se uz duž cijele plaže nalazi više kafića i restorana.",
   "welcome_p3": "Uz te pripitomljene plaže u okolici, postoje i brojne divlje kamenite plaže, na kojima će te moći uživati u potpunoj privatnosti.",
   "welcome_p4": "Pješice je moguće doći i do otočića Školjić (s desne strane mosta) na kojemu su božanske plaže prekrivene bijelim sitnim pijeskom, a poviše plaže je ugodna hladovina borovine.",
   "welcome_p5": "Dodatne informacije o apartmanima i otoku Viru možete pronači klikom na gornji meni.",
