--- a/i18n/de.json
+++ b/i18n/de.json
@@ -39,5 +39,5 @@
   "zadar_region": "Mehr über die Zadar Region auf ",
   "find_us": "Besuche uns auf ",
   "follow_us": "Folge uns:",
-  "social_area": "Weitere Bilder finden Sie auf unseren Socialen Medien"
+  "social_area": "Weitere Bilder finden Sie auf unseren Sozialen Medien"
 }
